style.css
@import url('https://fonts.googleapis.com/css2?family=Amatic+SC&display=swap');





body {background-color: #1e1d1d;}
*, *::before, *::after{
    box-sizing: border-box;
    font-family: "Amatic SC", cursive;

}



body{
    flex-wrap: wrap;
    padding: 0;
    margin: 0;
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100vw;
    height: 100vh;
    background-color: #161c1f;
    color: white;
    font-size: 150%;


}

.text{

    color: #1c1c1c;
}

.super-container {
    margin-top: 100px;
    height: 70vh;
    width: 60%;
    max-width: 80%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;

}

.container{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 600px;
    max-width: 80%;
    background-color: ghostwhite;
    padding: 10px;
    border-radius: 5px;
    box-shadow: 0 0 10px;
    animation: fadeIn 5s;
    margin-bottom: 100px;

}

@keyframes fadeIn {
    0% { opacity: 0; }
    100% { opacity: 1; }
}

.btn-grid{

    display: grid;
    grid-template-columns: repeat(2, auto);
    gap: 10px;
    margin-top: 20px;
}
.btn{

    border-radius: 0px;
    padding: 5px 10px;
    border: 1px solid hsl(0, 0%, 21%);
    color: gray;
    font-size: 90%;



}
.btn:hover{
    border-color: #1c1c1c;
    color: ghostwhite;
    background: #343434;

}
.btn2{
    width: 140px;
    height: 60px;
    border-radius: 0px;
    padding: 5px 10px;
    border: 1px solid hsl(0, 0%, 21%);
    color: gray;


}
.btn2:hover{
    border-color: #1c1c1c;
    color: ghostwhite;
    background: #343434;

}

.btn3{
    position: absolute;
    border-radius: 0px;
    padding: 5px 10px;
    border: 1px solid hsl(0, 0%, 21%);
    color: gray;
    top: 10px;
    left: 10px;




}
.btn3:hover{
    border-color: #1c1c1c;
    color: rgba(248, 248, 255, 0.12);
    background: rgba(255, 255, 255, 0.09);

}


/*FLAME*/
.wrapper{
    display: grid;
    place-items:end center;
    grid-template-areas: "flame-inner";
    width: 100px;
    height: 100px;
    margin-bottom: 10px;

}

.red{
    left: 10px;
    width: 60px;
    height: 60px;
    background: gray;
    box-shadow: 0 0 10px 5px ;

}

.yellow{
    left: 10px;
    width: 45px;
    height: 45px;
    background: #c9c9d0;

}
.white{
    left: 10px;
    width: 35px;
    height: 35px;
    background: ghostwhite;
}


.flame{
    grid-area: flame-inner;
    border-radius: 50% 0 50% 50%;
    transform: rotate(-45deg);
    animation: flicker 1s ease-in infinite;
}
.base{
    border-radius: 50%;
    position: absolute;
}
.flame-wrapper{
    position: relative;
    animation: flicker 3ms ease-in infinite;
}

@keyframes flicker {
    0% {transform: rotate(-45deg)}
    20% {transform: rotate(-42deg)scaleY(1);}
    40% {transform: rotate(-46deg)}
    60% {transform: rotate(-43deg)}
    80% {transform: rotate(-45deg);}
    100% {transform: rotate(-45deg)}

}




.wood{
    width:15px;
    height:100px;
    background: #414141;
    border-radius:5px;
}
#wood-1{
    transform:rotate(72deg);
    position:relative;
    top:-50px;

}

#wood-2{
    transform:rotate(106deg);
    position:relative;
    top:-150px;

}


.swordBox{
    position: absolute;
    top: 10px;
    right: 10px;




}



.cursor {
    position: fixed;
    border-radius: 50%;
    transform: translateX(-50%) translateY(-50%);
    pointer-events: none;
    left: -100px;
    top: 50%;
    mix-blend-mode: difference; //for dark and light modes
background-color: transparent;
    z-index: 10000;
    border: 2px solid white;
    height: 30px;
    width: 30px;
    transition: all 300ms ease-out;
}

@media (max-width: 600px) {
    .super-container,.container{
        margin: auto;
        width: 90%;
    }
}

